syntax = "proto3";

option go_package = ".;service"; 

service SayHello {
    rpc SayHello(HelloRequest) returns (HelloResponse) {} //這個service會發送一個request，返回一個response
}

message HelloRequest {
    string RequestName = 1;
    int64 age = 2;
      repeated string name = 3;
}

message HelloResponse {
    string ResponseMsg = 1;
}